<resources>
    <string name="app_name">ASP Tracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">signup</string>
    <string name="login_here">login here</string>
    <string name="email">email</string>

    <string name="fullname">fullname</string>
    <string name="string_signup" />
    <string name="logo">logo</string>
    <string name="don_t_have_an_account_sign_up">don\'t have an account?sign up</string>
    <string name="dont_have_an_account_sign_up">dont have an account?sign up</string>
    <string name="signuphere">Create a new account? sign up here</string>
    <string name="already_have_an_account_login_here">Already have an account? login here</string>
    <string name="configurations">Configurations</string>
    <string name="locate_coordinates_on_map">Locate coordinates on map</string>
    <string name="applogo">applogo</string>
    <string name="lock_phone_remotely">lock phone remotely</string>
    <string name="control_remote_phone">control remote phone</string>
    <string name="help">Help?</string>
    <string name="developers_info">Developers info</string>
    <string name="sign_up">Sign up</string>
    <string name="activitylogo">activitylogo</string>
    <string name="configure_location_settings">Configure location settings</string>
    <string name="how_do_you_want_your_phone_to_get_gps_and_email_text_it">How do you want your phone to get gps and email/text it?</string>
    <string name="set_friquency_number_of_hours">Set friquency (number of hours)</string>
    <string name="select_time_friquency">Select time friquency:</string>
    <string name="email_coordinates_to">Email coordinates to:</string>
    <string name="message_coordinates_to">Message coordinates to:</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="or">OR:</string>
    <string name="latitude">Latitude</string>
    <string name="longtude">Longtude</string>
    <string name="current_location">Current location</string>
    <string name="gmail">Gmail:</string>
    <string name="_0_0">0.0</string>

    <string name="_0_00">-0.00</string>
    <string name="longitude">longitude</string>
    <string name="location">Location</string>
    <string name="remote_control">Remote Control</string>
    <string name="remote_lock">Remote Lock</string>
    <string name="title_activity_location">Map</string>
    <string name="recovery_messaage_optional">Recovery Messaage (Optional)</string>
    <string name="leave_anyone_who_finds_your_device_a_message_or_phone_number_where_you_can_be_reached">Leave anyone who finds your device a message or phone number where you can be reached</string>
    <string name="message">Message</string>
    <string name="phone_number_optional">Phone number (Optional)</string>
    <string name="name">Name</string>
    <string name="to_get_the_location_enter_the_coordinates_and_click_search_button">To get the location enter the coordinates and click search button</string>

</resources>