<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/d1dc06537bfe47039474deb324382674" />

    <Button
        android:id="@+id/configure"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="27dp"
        android:background="#01685F"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/configurations"
        android:textColor="#FAF6F1F1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/coordinate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/coordinate"
        android:layout_width="411dp"
        android:textSize="20sp"
        android:background="#F1F1FAF6"
        android:textColor="#01685F"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="21dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/locate_coordinates_on_map"
        app:layout_constraintBottom_toTopOf="@+id/lockp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configure" />


    <Button
        android:id="@+id/lockp"
        android:layout_width="412dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="#01685F"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/lock_phone_remotely"
        android:textColor="#FAF6F1F1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/control"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinate" />

    <Button
        android:id="@+id/control"
        android:layout_width="410dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="4dp"
        android:background="#01685F"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/control_remote_phone"
        android:textColor="#FAF6F1F1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/locationHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lockp" />

    <TextView
        android:id="@+id/locationHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="548dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/help"
        android:textColor="@color/teal_700"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/developers_info"
        android:textColor="@color/teal_700"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/coordinate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/configure"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:srcCompat="@drawable/ic_configuse" />

</androidx.constraintlayout.widget.ConstraintLayout>

